--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "sass": "^1.77.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
